--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
   background-color: transparent;
   border: 0;
   color: gray;
-  font-size: 20px;
+  font-size: 40px;
   cursor: pointer;
   padding: 10px;
 }
@@ -113,11 +113,10 @@
 }
 
 /* ChatBox */
-.chatBox {
-  display: grid;
-  max-width: 480px;
-  background-color: transparent;
-  padding: 15px 30px;
+.chatContainer {
+  height: 80vh;
+  width: 80vw;
+  /* max-width: 480px; */
 }
 
 .quitButton {
@@ -130,3 +129,55 @@
   border: none;
   font-size: 25px;
 }
+
+.chatBox {
+  display: grid;
+  max-width: 480px;
+
+  padding: 15px 30px;
+}
+
+.chatMessages {
+  padding: 30px;
+  height: 70vh;
+  overflow-y: scroll;
+  margin-bottom: 15px;
+  background-color: rgba(29, 31, 36, 0.39);
+}
+
+.chatMessages .message {
+  padding: 10px;
+  margin-bottom: 15px;
+  background-color: var(--light-color);
+  border-radius: 5px;
+}
+
+.chatMessages .message .meta {
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--dark-color-b);
+  opacity: 0.7;
+  margin-bottom: 7px;
+}
+
+.chatMessages .message .meta span {
+  color: #777;
+}
+
+.chatInput {
+  display: flex;
+  flex-direction: row;
+}
+
+.chatInput input[type='text'] {
+  width: 75vw;
+}
+/* 
+.chatMessages::-webkit-scrollbar {
+  width: 1vw;
+}
+
+.chatMessages::-webkit-scrollbar-thumb {
+  background-color: hsla(0, 0%, 42%, 0.49);
+  border-radius: 100px;
+} */
