--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,7 +19,7 @@ code {
 
 main {
   /* min-height: 100vh; */
-  padding: 4rem 0;
+  padding: 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -33,7 +33,7 @@ main {
 }
 
 .title {
-  margin-top: 20%;
+  margin-top: 15%;
   line-height: 1.15;
   font-size: 4rem;
   font-weight: 700;
